Se actualizan iconos. La Base de datos del album ahora es de 200 laminas. Colores mas naturales en la línea gráfica. Se agrega la opción de ver lamina

--- a/prepros-6.config
+++ b/prepros-6.config
@@ -54,7 +54,8 @@
       "css/css",
       "css/scss",
       "scss",
-      "albumUSTA-masEco/css"
+      "albumUSTA-masEco/css",
+      "albumUSTA-masEco"
     ],
     "hideSystemFiles": true,
     "systemFiles": [
